{
    "name": "GameInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "53573fff-a8ae-42be-9ba2-5e72b452b708",
            "actions": [
                {
                    "name": "PositionMouse",
                    "type": "Value",
                    "id": "bef9903d-83e6-4de4-bd71-8942049deb82",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BoostSpeed",
                    "type": "Button",
                    "id": "6704e0cd-0367-4ecf-b32c-f12c2c4670cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BoostSpeedMobile",
                    "type": "Button",
                    "id": "68317f88-ffd6-4107-9d27-568a06e014f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f894130e-059a-41cc-9dee-28a30e9db8c8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositionMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb71ae1e-f5eb-441a-9db0-3907787a2230",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BoostSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44aadd6a-f74c-4a0e-86a7-ddbd2801f921",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BoostSpeedMobile",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}